Changes to package.jason

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "concurrently \"nodemon server.js\" \"cd ./client  && npm start \" ",
+    "dev": "concurrently \"nodemon server.js\" \"cd ./BurnVR  && npm start \" ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd client && npm i && npm run build"
+    "postinstall": "cd BurnVR && npm i && npm run build"
   }
 }
