--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BradOFarrell/postitnotes.git"
+    "url": "git+https://github.com/BradOFarrell/burnvr.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/BradOFarrell/postitnotes/issues"
+    "url": "https://github.com/BradOFarrell/burnvr/issues"
   },
-  "homepage": "https://github.com/BradOFarrell/postitnotes#readme",
+  "homepage": "https://github.com/BradOFarrell/burnvr#readme",
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
@@ -33,6 +33,6 @@
     "start": "node server.js",
     "dev": "concurrently \"nodemon server.js\" \"cd ./BurnVR  && npm start \" ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd BurnVR && npm i && npm run build"
+    "postinstall": "cd BurnVR && npm i && npm run bundle"
   }
 }
