--- a/package.json
+++ b/package.json
@@ -18,16 +18,11 @@
   },
   "homepage": "https://github.com/BradOFarrell/burnvr#readme",
   "dependencies": {
-    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "mongoose": "^4.12.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2",
-    "styled-components": "^2.2.1"
+    "mongoose": "^4.12.1"
   },
   "scripts": {
     "start": "node server.js",
