--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "scripts": {
     "start": "node server.js",
     "dev": "concurrently \"nodemon server.js\" \"cd ./BurnVR  && npm start \" ",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd BurnVR && npm i && npm run bundle"
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
